tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_ISNOT_float.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
@types('float', 'float')
def compare_isnot_float(a, b):
    return a is not b
